2011-07-05 11:57  paddockd

	* [r267] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c,
	  src/squeezeslave/squeezeslave.h: Added windows -N/--renice
	  -DRENICE support.
	  Increased version to 267.

2011-07-04 18:40  paddockd

	* [r266] ChangeLog, src/slimproto/slimproto.c,
	  src/slimproto/slimproto.h, src/squeezeslave/squeezeslave.c,
	  src/squeezeslave/squeezeslave.h: Added slimproto_button and
	  slimproto_knob functions to libslimprotocol from rpress
	  squeezeslave empeg patch.
	  Added compiler error message for windows builds when RENICE
	  defined.
	  Increased FIRMWARE_VERSION to 6.
	  Increased version to 266.

2011-07-04 14:29  paddockd

	* [r265] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c: Added
	  -N/--renice option implementing thread priority changes from
	  rpress empeg patch. Linux, Solaris and OSX only. Enable by adding
	  -DRENICE to CFLAGS in the appropriate makefile.
	  Increased version to 265.

2011-07-01 21:19  paddockd

	* [r264] README, scripts/buildall-osx, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Applied http thread yield and
	  output thread PA callback mutex locking removal changes from
	  rpress empeg patch.
	  Updated mac build script for OSX 10.6.8.
	  Increased version to 264.

2011-06-24 12:45  paddockd

	* [r262] ChangeLog, TODO, src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/squeezeslave/squeezeslave.c: Fixed vorbis decoder debug
	  messages.
	  Increased version to 262.

2011-06-06 14:42  paddockd

	* [r261] ChangeLog, src/squeezeslave/squeezeslave.c: Increased
	  version to 261.

2011-06-06 14:40  paddockd

	* [r260] src/slimaudio/slimaudio.h: Could not select output device